--- a/index.html
+++ b/index.html
@@ -4,7 +4,9 @@
     <meta charset="UTF-8">
     <title>gamebook.js - Fire on the Water</title>
     <script src="//ajax.googleapis.com/ajax/libs/jquery/1.8.3/jquery.min.js"></script>
+    <!-- <script src="jquery-1.8.2.js"></script> -->
     <script src="jquery.terminal-0.4.22.js"></script>
+    <script src="PorterStemmer1980.js"></script>
     <script src="gamebook.js"></script>
     <link rel="stylesheet" type="text/css" href="jquery.terminal.css">
 
@@ -20,6 +22,10 @@
 
 .terminal .terminal-output div div, .terminal .prompt {
     line-height: 14px;
+}
+
+.word-completion {
+    color: #0f60ff
 }
 
 </style>
