first pass at fotw_custom.json done

--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <script src="jquery.terminal-0.4.22.js"></script>
     <script src="PorterStemmer1980.js"></script>
     <script src="gamebook.js"></script>
+    <script src="fotw.js"></script>
     <link rel="stylesheet" type="text/css" href="jquery.terminal.css">
 
 <style>
