--- a/index.html
+++ b/index.html
@@ -3,11 +3,12 @@
   <head>
     <meta charset="UTF-8">
     <title>gamebook.js - Fire on the Water</title>
-    <script src="//ajax.googleapis.com/ajax/libs/jquery/1.8.3/jquery.min.js"></script>
-    <!-- <script src="jquery-1.8.2.js"></script> -->
+    <!-- <script src="//ajax.googleapis.com/ajax/libs/jquery/1.8.3/jquery.min.js"></script> -->
+    <script src="jquery-1.8.2.js"></script>
     <script src="jquery.terminal-0.4.22.js"></script>
     <script src="PorterStemmer1980.js"></script>
-    <script src="gamebook.js"></script>
+    <script src="gamebook2.js"></script>
+    <script src="utils.js"></script>
     <script src="fotw.js"></script>
     <link rel="stylesheet" type="text/css" href="jquery.terminal.css">
 
@@ -30,6 +31,14 @@
 }
 
 </style>
+
+<script>
+
+gamebook.special_sections = fotw_special_sections;
+gamebook.special_choices = fotw_special_choices;
+gamebook.special_combats = fotw_special_combats;
+
+</script>
 
   </head>
 
