--- a/index.html
+++ b/index.html
@@ -36,6 +36,7 @@
 
 gamebook.special_sections = fotw_special_sections;
 gamebook.special_choices = fotw_special_choices;
+gamebook.special_choice_requirements = fotw_special_choice_requirements;
 gamebook.special_combats = fotw_special_combats;
 
 </script>
