--- a/index.html
+++ b/index.html
@@ -11,15 +11,16 @@
     <script src="utils.js"></script>
     <script src="fotw.js"></script>
     <link rel="stylesheet" type="text/css" href="jquery.terminal.css">
+    <link rel="stylesheet" type="text/css" href="http://fonts.googleapis.com/css?family=PT+Mono|Merienda|Inconsolata|Droid+Sans+Mono&subset=latin,latin-ext" />
 
 <style>
 
 .terminal {
-    font-family: Courier, monospace;
-    font-weight: bold;
-    font-size: 15px;
-    color: Lime;
-    overflow: auto;
+   font-family: droid sans mono, monospace;
+   font-weight: bold;
+   font-size: 15px;
+   color: Lime;
+   overflow: auto;
 }
 
 .terminal .terminal-output div div, .terminal .prompt {
@@ -36,7 +37,6 @@
 
 gamebook.special_sections = fotw_special_sections;
 gamebook.special_choices = fotw_special_choices;
-gamebook.special_choice_requirements = fotw_special_choice_requirements;
 gamebook.special_combats = fotw_special_combats;
 
 </script>
