--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <script src="utils.js"></script>
     <script src="fotw.js"></script>
     <link rel="stylesheet" type="text/css" href="jquery.terminal.css">
-    <link rel="stylesheet" type="text/css" href="http://fonts.googleapis.com/css?family=PT+Mono|Merienda|Inconsolata|Droid+Sans+Mono&subset=latin,latin-ext" />
+<!--    <link rel="stylesheet" type="text/css" href="http://fonts.googleapis.com/css?family=PT+Mono|Merienda|Inconsolata|Droid+Sans+Mono&subset=latin,latin-ext" /> -->
 
 <style>
 
