--- a/index.html
+++ b/index.html
@@ -3,7 +3,8 @@
   <head>
     <meta charset="UTF-8">
     <title>gamebook.js - Fire on the Water</title>
-    <script src="//ajax.googleapis.com/ajax/libs/jquery/1.8.3/jquery.min.js"></script>
+    <!-- Won't work with other version of jQuery.. -->
+    <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.8.3/jquery.min.js"></script>
     <!-- <script src="jquery-1.8.2.js"></script> -->
     <script src="jquery.terminal-0.4.22.js"></script>
     <script src="PorterStemmer1980.min.js"></script>
